--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+.App,
+html,
+body {
+  height: 100vh;
+  background-color: rgba(100, 224, 255, 0.596);
+}
+
 .App {
   text-align: center;
   text-transform: uppercase;
