--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,36 @@
-.App,
-html,
-body {
-  height: 100vh;
-  background-color: rgba(100, 224, 255, 0.596);
+html {
+  background: linear-gradient(rgb(107, 192, 92), rgba(178, 255, 54, 0.452));
+  background-repeat: no-repeat;
+  background-size: contain;
+  color: rgb(172, 79, 18);
+  text-shadow: 0 0 2px white;
+  margin: 0;
+  font-weight: 700;
 }
-
 .App {
   text-align: center;
   text-transform: uppercase;
 }
-
+header {
+  background-image: url(./images/banner.jpg);
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100px;
+  background-size: contain;
+  color: white;
+}
 div.allAnimals {
   display: flex;
   justify-content: space-around;
+}
+h1 {
+  margin: 0;
+}
+button {
+  background-color: rgba(172, 80, 18, 0.808);
+  color: white;
+  box-shadow: 0 0 5px white;
+}
+button:hover {
+  box-shadow: 0 0 20px white;
 }
