--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ header {
   background-repeat: no-repeat;
   width: 100%;
   height: 100px;
-  background-size: contain;
+  background-size: cover;
   color: white;
 }
 div.allAnimals {
