--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ html {
 .App {
   text-align: center;
   text-transform: uppercase;
+  height: 100vh;
 }
 header {
   background-image: url(./images/banner.jpg);
